--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -32,7 +32,7 @@ body {
 }
 
 .box-shadow {
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 突出的陰影效果 */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1) !important; /* 突出的陰影效果 */
   border-radius: 32px;
 }
 
